fix: truncated activity bar length

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   background: #000;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   display: none;
 }
 
